fix: clippath transition fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -212,6 +212,8 @@ body {
 ::view-transition-new(root) {
     animation: none;
     mix-blend-mode: normal;
+    position: fixed;
+    inset: 0;
 }
 
 ::view-transition-new(root) {
